# quiz-cantantes

./: .env.example  .gitignore  README.md  app.py  datos.py  main.py  prueba_api_deezer.py  pyproject.toml  validacion.py
Fase 1/: datos.py  validacion.py
static/css/: style.css
templates/: index.html
